minio、rabbit相关操作与其他优化